--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -26,7 +31,9 @@
     "@angular-devkit/build-angular": "^17.3.9",
     "@angular/cli": "^17.3.9",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
