complete scenario for mail confirmation && initializing Toaster

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
