--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "rxjs": "~7.8.0",
     "sass": "^1.79.4",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
