--- a/landingPage/package.json
+++ b/landingPage/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "bootstrap": "^5.3.3",
     "ngx-owl-carousel-o": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
