--- a/landingPage/package.json
+++ b/landingPage/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "ngx-owl-carousel-o": "^18.0.0",
+    "ngx-spinner": "^17.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
